force-app/main/default/objects/Applied_Credit__c/Applied_Credit__c.object-meta.xml
<CustomObject>
    <label>Applied Credit</label>
    <nameField>
        <displayFormat>AC-{YYYY}{000}</displayFormat>
        <label>Applied Credit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applied Credits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>