force-app/main/default/objects/Applied_Credit__c/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <label>Cart</label>
    <referenceTo>Cart__c</referenceTo>
    <relationshipLabel>Applied Credits</relationshipLabel>
    <relationshipName>Applied_Credits</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>