force-app/main/default/objects/Applied_Credit__c/fields/Credit__c.field-meta.xml
<CustomField>
    <fullName>Credit__c</fullName>
    <label>Credit</label>
    <referenceTo>Credit__c</referenceTo>
    <relationshipLabel>Applied Credits</relationshipLabel>
    <relationshipName>Applied_Credits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>